# amethyst_locale

./: Cargo.toml
src/: lib.rs
src/asset/: mod.rs
src/asset/formats/: fluent.rs  mod.rs
src/assets/: fluent.rs  mod.rs
src/resources/: fluent.rs  mod.rs
